# ops-board

./: .dockerignore  .env.example  .gitattributes  .gitignore  HANDOFF.md  README.md  compose.yaml
access/: tailscale.md
docker/: compose.yaml
docs/adr/: 0001-v1-status-source.md  0002-uptime-kuma-bootstrap.md  0003-first-run-account-boundary.md  0004-linux-first-operator-workflow.md  001-v1-status-source.md  002-uptime-kuma-bootstrap.md  003-first-run-account-boundary.md  004-linux-first-operator-workflow.md  005-ops-board-observe-package.md
docs/monitoring/: first-run-accounts.md  ops-board-user-manual.md
docs/monitoring/images/: README.md
docs/onboarding/: codex-guide.md  human-guide.md  onboarding-contract.md  onboarding-design-playbook.md
docs/onboarding/images/: README.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-05-23-ops-board-restructure.md  2026-05-24-ops-board-onboarding-system.md  2026-05-24-ops-board-phased-stacks.md  2026-05-24-root-compose-aggregator.md  2026-06-07-day-1-acceptance-pass.md  2026-06-07-linux-first-operator-workflow.md  2026-06-07-ops-board-day-1-hardening.md  2026-06-07-uptime-kuma-bootstrap.md  2026-06-23-ops-board-observe-package.md  2026-06-24-obvious-onboarding-docs.md  (+1 more)
examples/onboarding/: README.md  compose.yaml  pyproject.toml
examples/onboarding/config/: ops-board.example.yaml
examples/onboarding/dummy-api/: Dockerfile  README.md  app.py  pyproject.toml
examples/onboarding/dummy-api/tests/: test_app.py
examples/onboarding/dummy-job/: Dockerfile  README.md  job.py  pyproject.toml
examples/onboarding/dummy-job/tests/: test_job.py
examples/onboarding/shared/: __init__.py  ops_observe.py
examples/onboarding/tests/: test_ops_observe.py
scripts/: README.md  backup.ps1  bootstrap-uptime-kuma.ps1  bootstrap-uptime-kuma.sh  init-local-config.ps1  init-local-config.sh  restore.ps1  smoke-day1.ps1  smoke-day1.sh  status.ps1  status.sh  update-stack.ps1  update-stack.sh
scripts/lib/: ops-board.sh
scripts/tests/: test-linux-operator-scripts.sh
stacks/homepage/: README.md  compose.yaml
stacks/plane/: .gitignore  README.md  compose.yaml  plane.env.example
stacks/signoz/: README.md  compose.yaml
stacks/uptime-kuma/: README.md  compose.yaml
(+14 files in other folders)
