[project]
name = "ops-board-onboarding-playground"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.28.0",
  "loguru>=0.7.3",
  "opentelemetry-api>=1.39.0",
  "opentelemetry-exporter-otlp-proto-http>=1.39.0",
  "opentelemetry-sdk>=1.39.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "pytest>=9.0.0",
  "pyyaml>=6.0.2",
  "tenacity>=9.1.0",
  "uvicorn[standard]>=0.38.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".", "dummy-job", "dummy-api"]
testpaths = [
  "tests",
  "dummy-job/tests",
  "dummy-api/tests",
]
