[project]
name = "ops-board-onboarding-playground"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.28.0",
  "loguru>=0.7.3",
  "ops-board-observe",
  "pytest>=9.0.0",
  "tenacity>=9.1.0",
  "uvicorn[standard]>=0.38.0",
]

[tool.uv]
package = false

[tool.uv.sources]
ops-board-observe = { path = "../../packages/ops-board-observe", editable = true }

[tool.pytest.ini_options]
pythonpath = [".", "dummy-job", "dummy-api"]
testpaths = [
  "tests",
  "dummy-job/tests",
  "dummy-api/tests",
]
