[project]
name = "ops-board-dummy-job"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.3",
  "ops-board-observe",
  "pytest>=9.0.0",
  "tenacity>=9.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
ops-board-observe = { path = "../../../packages/ops-board-observe", editable = true }

[tool.pytest.ini_options]
pythonpath = ["..", "."]
testpaths = ["tests"]
